main/default/objects/Facility_Audits__c/Facility_Audits__c.object-meta.xml
<CustomObject>
    <description>Facility Audits</description>
    <label>Facility Audits</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Facility Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facility Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>