main/default/objects/Facility_Audits__c/fields/Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Date__c</fullName>
    <description>Audit Date</description>
    <inlineHelpText>Audit Date</inlineHelpText>
    <label>Audit Date</label>
    <type>Date</type>
</CustomField>