main/default/objects/Facility_Audits__c/fields/Audit_Group__c.field-meta.xml
<CustomField>
    <fullName>Audit_Group__c</fullName>
    <description>Audit Group</description>
    <inlineHelpText>Audit Group</inlineHelpText>
    <label>Audit Group</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual WCA</fullName>
                <default>true</default>
                <label>Annual WCA</label>
            </value>
            <value>
                <fullName>Periodic FS</fullName>
            </value>
            <value>
                <fullName>WCA Follow Up CAPA</fullName>
            </value>
            <value>
                <fullName>FS Follow Up CAPA</fullName>
            </value>
            <value>
                <fullName>On Site Investigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>