main/default/objects/Facility_Audits__c/fields/Audit_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Request_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Audit Request Date</description>
    <inlineHelpText>Audit Request Date</inlineHelpText>
    <label>Audit Request Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>