main/default/objects/Facility_Audits__c/fields/Audit_Type__c.field-meta.xml
<CustomField>
    <fullName>Audit_Type__c</fullName>
    <description>Audit Type</description>
    <inlineHelpText>Audit Type</inlineHelpText>
    <label>Audit Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Audit_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WCA</fullName>
                <default>true</default>
                <label>WCA</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
            <value>
                <fullName>WCA CAPA (1 Mnth)</fullName>
            </value>
            <value>
                <fullName>WCA CAPA (3 Mnth)</fullName>
            </value>
            <value>
                <fullName>WCA CAPA (6 Mnth)</fullName>
            </value>
            <value>
                <fullName>Other CAPA ( 6 Mnth)</fullName>
            </value>
            <value>
                <fullName>FS CAPA (1 Mnth)</fullName>
            </value>
            <value>
                <fullName>FS CAPA (3 Mnth)</fullName>
            </value>
            <value>
                <fullName>FS CAPA (6 Mnth)</fullName>
            </value>
            <value>
                <fullName>On Site Investigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>