main/default/objects/Facility_Audits__c/fields/B1_Findings__c.field-meta.xml
<CustomField>
    <fullName>B1_Findings__c</fullName>
    <description>B1 Findings</description>
    <inlineHelpText>B1 Findings</inlineHelpText>
    <label>B1 Findings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>