main/default/objects/Facility_Audits__c/fields/CAPA_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>CAPA_Due_Date__c</fullName>
    <description>CAPA Due Date</description>
    <formula>CASE( 
 Audit_Type__c, 
"WCA CAPA (1 Mnth)", Audit_Request_Date__c  + 30, 
"WCA CAPA (3 Mnth)", Audit_Request_Date__c  + 90, 
"WCA CAPA (6 Mnth)", Audit_Request_Date__c  + 180, 
"Other CAPA (6 Mnth)", Audit_Request_Date__c  + 180, 
"FS CAPA (1 Mnth)", Audit_Request_Date__c  + 30, 
"FS CAPA (3 Mnth)", Audit_Request_Date__c  + 90, 
"FS CAPA (6 Mnth)", Audit_Request_Date__c  + 180, 
 null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CAPA Due Date</inlineHelpText>
    <label>CAPA Due Date</label>
    <type>Date</type>
</CustomField>