main/default/objects/Facility_Audits__c/fields/Critical_Findings__c.field-meta.xml
<CustomField>
    <fullName>Critical_Findings__c</fullName>
    <description>Critical Findings</description>
    <inlineHelpText>Critical Findings</inlineHelpText>
    <label>Critical Findings</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>