main/default/objects/Facility_Audits__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <description>Facility</description>
    <inlineHelpText>Facility</inlineHelpText>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Facility Audits</relationshipLabel>
    <relationshipName>Facility_Audits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>