main/default/objects/Facility_Audits__c/fields/Major_Findings__c.field-meta.xml
<CustomField>
    <fullName>Major_Findings__c</fullName>
    <description>Major Findings</description>
    <inlineHelpText>Major Findings</inlineHelpText>
    <label>Major Findings</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>