main/default/objects/Facility_Audits__c/fields/Minor_Findings__c.field-meta.xml
<CustomField>
    <fullName>Minor_Findings__c</fullName>
    <description>Minor Findings</description>
    <inlineHelpText>Minor Findings</inlineHelpText>
    <label>Minor Findings</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>