main/default/objects/Facility_Audits__c/fields/Moderate_Findings__c.field-meta.xml
<CustomField>
    <fullName>Moderate_Findings__c</fullName>
    <description>Moderate Findings</description>
    <inlineHelpText>Moderate Findings</inlineHelpText>
    <label>Moderate Findings</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>