main/default/objects/Facility_Audits__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>Outcome</description>
    <formula>IF( 
OR( 
 ISPICKVAL( Audit_Type__c, "On Site Investigation" ) , 
 ISBLANK(Audit_Date__c)), " ", 

 IF (OR( ISPICKVAL( A_Finding__c , "Yes"), 
 ISPICKVAL( B1_Findings__c , "Yes")),"High", 
IF( OR(ISPICKVAL( B2_Finding__c , "Yes"), 
 ISPICKVAL( B2_6_Findings__c , "Yes"), 
 ISPICKVAL(  B2_T_Findings__c  ,"Yes")),"Medium","Low")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Outcome</inlineHelpText>
    <label>Outcome</label>
    <type>Text</type>
</CustomField>