main/default/objects/Facility_Audits__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Facility_Number__c</columns>
    <columns>Audit_Group__c</columns>
    <columns>Audit_Type__c</columns>
    <columns>Audit_Request_Date__c</columns>
    <columns>Audit_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>